[package]
name = "peak-meter"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.43.0"
features = [
  "Win32_System_Com", 
  "Win32_Media_Audio",
  "Win32_Foundation",
  "Win32_System_Com_StructuredStorage",
  "Win32_Media_Audio_Endpoints"
]
